--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,8 @@ body {
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
+  @apply bg-baseLayer;
 }
 
 * {
@@ -18,10 +20,18 @@ body {
   background: linear-gradient(269.96deg, rgba(29, 29, 29, 0) 0.04%, rgba(29, 29, 29, 0.8) 99.5%);
 }
 
+.banner-image {
+  @apply w-full h-[280px] sm:h-[480px] md:h-[560px] lg:h-[640px] xl:h-[720px];
+}
+
 .poster-overlay {
   background: linear-gradient(180deg, rgba(29, 29, 29, 0) 0%, rgba(29, 29, 29, 0.8) 80.79%);
 }
 
 .flex-center {
   @apply flex items-center justify-center;
+}
+
+.scroll-hidden::-webkit-scrollbar {
+  @apply hidden;
 }
