--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,7 @@ body {
 .scroll-hidden::-webkit-scrollbar {
   @apply hidden;
 }
+
+.slide-entrance {
+  @apply opacity-0 -translate-x-2 group-hover:opacity-100 group-hover:translate-x-0 transition-all;
+}
