--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ body {
 }
 
 .banner-image {
-  @apply w-full h-[280px] sm:h-[480px] md:h-[560px] lg:h-[640px] xl:h-[720px];
+  @apply w-full h-[280px] sm:h-[480px] md:h-[560px] lg:h-[640px] xl:h-[840px];
 }
 
 .poster-overlay {
@@ -38,4 +38,20 @@ body {
 
 .slide-entrance {
   @apply opacity-0 -translate-x-2 group-hover:opacity-100 group-hover:translate-x-0 transition-all;
+}
+
+.watch-now-button {
+  @apply text-primary border hover:bg-primary hover:bg-opacity-10 w-[105px] md:w-[150px] border-primary py-1 md:py-2 rounded-full transition-all;
+}
+
+.animated {
+  animation: zoomOut 5s infinite;
+}
+
+@keyframes zoomOut {
+  0% {transform: scale(1.1)};
+  25% {transform: scale(0.6)};
+  50% {transform: scale(0.8)};
+  75% {transform: scale(1.05)};
+  100% {transform: scale(1.1)};
 }
