--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   
   @apply bg-baseLayer;
 }
@@ -52,3 +53,5 @@ body {
   0% {transform: scale(1.1);}
   100% {transform: scale(1);}
 }
+
+@import 'fancy-scroll.css'
