--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,24 @@ body {
   animation: zoomOut 3.5s linear;
 }
 
+.fade-in {
+  animation: fadeIn 0.3s;
+}
+
+.fade-out {
+  animation: fadeOut 0.3s;
+}
+
+@keyframes fadeOut {
+  from {opacity: 1};
+  to {opacity: 0};
+}
+
+@keyframes fadeIn {
+  from {opacity: 0};
+  to {opacity: 1};
+}
+
 @keyframes zoomOut {
   0% {transform: scale(1.1);}
   100% {transform: scale(1);}
