--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,12 +9,20 @@ body {
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
-  @apply bg-baseLayer;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.bg-image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index:-1;
 }
 
 .banner-overlay {
@@ -22,7 +30,7 @@ body {
 }
 
 .banner-image {
-  @apply w-full h-[280px] sm:h-[480px] md:h-[560px] lg:h-[640px] xl:h-[840px];
+  @apply w-full h-[280px] sm:h-[360px] md:h-[480px] lg:h-[560px] xl:h-[640px];
 }
 
 .poster-overlay {
@@ -70,6 +78,15 @@ body {
 @keyframes zoomOut {
   0% {transform: scale(1.1);}
   100% {transform: scale(1);}
+}
+
+@keyframes animatedBackground {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -10000px 0;
+  }
 }
 
 @import 'fancy-scroll.css'
